--- a/404.html
+++ b/404.html
@@ -20,6 +20,7 @@ layout: default
 <div class="container">
   <h1>You got me :(</h1>
 
-  <p><strong>This is a 404 page. If you have followed a link to my post from someplace, try removing the slash (/) at the end and press Enter.</strong></p>
-  <p>This could be because of my recent migration of the hosting platform. If not, I guess the post or page does not exist on the website anymore.</p>
+  <p><strong>This is a 404 page.</strong></p>
+  <p> If you followed a link to a COVID dashboard from social media, its been modernized and moved to our <a link="https://www.thepsi.com/covid19-updates/">PSI website</a>.</p>
+  <p> If not, I guess the post or page does not exist on the website anymore.</p>
 </div>
