--- a/404.html
+++ b/404.html
@@ -21,6 +21,6 @@ layout: default
   <h1>You got me :(</h1>
 
   <p><strong>This is a 404 page.</strong></p>
-  <p> If you followed a link to a COVID dashboard from social media, its been modernized and moved to our <a link="https://www.thepsi.com/covid19-updates/">PSI website</a>.</p>
+  <p> If you followed a link to a COVID dashboard from social media, its been modernized and moved to our <a href="https://www.thepsi.com/covid19-updates/">PSI website</a>.</p>
   <p> If not, I guess the post or page does not exist on the website anymore.</p>
 </div>
